fix: implement workaround for IntersectionObserver bug
Most browsers have a broken implementation of IntersectionObserver that does not recognise zero-area intersections as being isIntersecting. Additionally, they do not emit an entry when the element is already partially overlapping the viewport until the element is fully contained in the viewport. The lazy loader should be initialised after first render so that the element has some chance to be at a representative size and position.

--- a/packages/core/src/components/providers/file/file.css
+++ b/packages/core/src/components/providers/file/file.css
@@ -1,3 +1,11 @@
+:host {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 audio,
 video {
   border-radius: inherit;
